trace-grapher/deploy-trace-grapher/bases/kafka-connect/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect-ui

spec:
  selector:
    matchLabels:
      app: kafka-connect-ui
  template:
    metadata:
      labels:
        app: kafka-connect-ui
    spec:
      containers:
      - name: kafka-connect-ui
        image: landoop/kafka-connect-ui
        ports:
        - name: http-webui
          containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
