trace-grapher/deploy-trace-grapher/bases/kafka-connect/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect-ui
spec:
  type: ClusterIP
  selector:
    app: kafka-connect-ui
  ports:
  - name: http-webui
    protocol: "TCP"
    port: 8000
    targetPort: 8000
