trace-grapher/deploy-trace-grapher/bases/kafka-connect/ui-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-connect-ui
spec:
  hosts: [ "*" ]
  gateways: [ tracegrapher-gateway ]
  http:
  - match:
    - uri:
        prefix: /kafka-connect
    rewrite:
      uri: /
    route:
    - destination:
        host: kafka-connect-ui
        port:
          number: 8000
  - match:
    - uri:
        regex: /api/kafka-connect-([0-9]+)(/.*)
    route:
    - destination:
        host: kafka-connect-ui
        port:
          number: 8000
